// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Polkadot AssetHub Multisig Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Dave rejects the announced call 1`] = `[]`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "15N29nUeZSSiGb784vk2w11rHydpG5kUbUbyPJ1qFYn5mMLB",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "1wgYFdjeVdpFGEStPLCa9doa8CAUpg3VgX39wamP8C37Buv",
      "callHash": "(hash)",
      "multisig": "15N29nUeZSSiGb784vk2w11rHydpG5kUbUbyPJ1qFYn5mMLB",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "14DcToZT6KQUD2hLxoAGPQ529oSkimMMAirvrBn5hQVdND8i",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "1e2HDzqfgsPUKveANrp1MgYtBvgwv6THoxThKZ1H8QtomMe",
      "callHash": "(hash)",
      "multisig": "14DcToZT6KQUD2hLxoAGPQ529oSkimMMAirvrBn5hQVdND8i",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy multisig > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "1siUwy7MvGtLgaRuZBpKUhA6Ncn1M7uRtvGLu2zcKo2sqkk",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > Cancel 2-of-3 multisig with pure proxy before any other approvals > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1u25AfzWnPPhggSotF8KqBqa5c11fQqX4DKQYYpcecQa2tM",
      "callHash": "(hash)",
      "multisig": "13G1sUGhNnCWuzj2CUzStezPCovZaKZ3VEyxW31grcLF4usC",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;
